<resources>
    <string name="app_name">MyFridge</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="detailed_instructions_button">Instructions</string>
    <string name="action_instructions_error">Invalid API url found</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main_with_nav_drawer">MainActivityWithNavDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Menu</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_add">Add New Item</string>

    <string name="menu_home">My Fridge</string>
    <string name="menu_recipes">Recipes</string>
    <string name="menu_shopping">Shopping List</string>
    <string name="menu_expiring">Expiring Soon</string>
    <!-- Preference Titles -->
    <string name="general_header">General</string>
    <string name="widget_header">Home Screen Widget</string>

    <!-- General Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="pref_expiration_key">expires</string>
    <string name="pref_expiration_title">Expiration Period (days)</string>
    <string name="pref_expiration_detailed">This value determines how soon to inform you of expiring items. The number specified is the number of days before the expiration date that the items should begin appearing on your expiring soon list.</string>

    <!-- Widget Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <string name="edit_food">Edit food name</string>
    <string name="edit_expiration">Add expiration date</string>
    <string name="day">DD</string>
    <string name="month">MM</string>
    <string name="year">YYYY</string>
    <string name="date">Date</string>

    <string name="add_to_shopping_list">Add to which shopping list?</string>
    <string name="add_to_shopping_error">You don\'t have any shopping lists to add to</string>


    <string name="image_dir">temp_images</string>
    <string name="image_file">temp_image.jpg</string>
    <string name="provider">com.example.fileprovider</string>

    <string name="remove_button">Remove</string>
    <string name="submit_button">Submit</string>
    <string name="add_button">Add Item</string>
    <string name="create_shopping_list_button">Create Shopping List</string>

    <string name="enter_name_hint">Enter Name of Food</string>
    <string name="enter_shopping_name_hint">Enter Name of Shopping List</string>

    <string name="recipe_img_desc">Recipe Image</string>
    <string name="food_img_desc">Food Image</string>
    <string name="detailed_recipe_img">Detailed Recipe Image</string>
    <string name="detailed_recipe_servings_img">Detailed Recipe Servings Image</string>
    <string name="expiring_food_img">Expiring Food Image</string>
    <string name="add_image_imgButtn">Add Image Button</string>

</resources>