<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/menu_home"
            android:icon="@drawable/ic_home"/>
        <item
            android:id="@+id/nav_recipes"
            android:title="@string/menu_recipes"
            android:icon="@drawable/ic_recipes"/>
        <item
            android:id="@+id/nav_expiring"
            android:title="@string/menu_expiring"
            android:icon="@drawable/ic_expiring"/>
        <item android:id="@+id/nav_settings"
            android:title="Settings"
            android:icon="@drawable/ic_settings"/>
    </group>
</menu>
