<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/add_food">

    <EditText
        android:id="@+id/editName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_food"
        />

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editDay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/day"
            android:inputType="number"
            android:maxLines="1"
            />

        <EditText
            android:id="@+id/editMonth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/month"
            android:inputType="number"
            android:maxLines="1"
            android:layout_marginStart="8dp"/>

        <EditText
            android:id="@+id/editYear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/year"
            android:inputType="number"
            android:maxLines="1"
            android:layout_marginStart="8dp"/>

    </LinearLayout>

</LinearLayout>

<!--This is a horizontal linear layout, with three text boxes, to make a D/M/Y format. maxlines means they can
 only enter one string, and number means they can only enter numbers. We can sort by year, then month, then day-->